# fastapi

./: .gitignore  README.md
notifier/: .env.example  Dockerfile  README.md  app.py  db.py  docker-compose.yml  handlers.py  managers.py  pyproject.toml  schemas.py  token_handler.py  worker.py
notifier/api/: routers.py
notifier/api/messages/: handlers.py  messages.py  schemas.py  utils.py
notifier/api/users/: managers.py  schemas.py  users.py  utils.py
notifier/api/utils/: sender.py
notifier/db/: mess_to_db.py  pool.py  schemas.py
notifier/infra/: .env.example  docker-compose.yml
notifier/services/: handlers.py  managers.py  token_encode.py
