[tool.poetry]
name = "notifier"
version = "0.1.0"
description = ""
authors = ["vadikam100500 <vadik.msk.100500@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.2"
fastapi = "^0.74.1"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
pydantic = "^1.9.0"
aioredis = "^2.0.1"
jwt = "^1.3.1"
requests = "^2.27.1"
flower = "^1.0.0"
celery = {version = "5.0.5", extras = ["redis"]}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-broken-line = "^0.4.0"
flake8-return = "^1.1.3"
flake8-isort = "^4.1.1"
pep8-naming = "^0.12.1"
mypy = "^0.931"
isort = "^5.10.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
